--- a/chrome-extension.css
+++ b/chrome-extension.css
@@ -13,11 +13,21 @@ input {
 
 }
 
-button {
+#input-btn {
     background-color: goldenrod;
     border: none;
     color: white;
     width: 100px;
+    margin-top: 5px;
+    padding: 10px;
+    font-weight: bold;
+}
+
+#clear-el {
+    background-color: white;
+    border: 1px solid goldenrod;
+    color: goldenrod;
+    width: 120px;
     margin-top: 5px;
     padding: 10px;
     font-weight: bold;
